package com.example.jaime_plataforma_voluntariado_pde.utils;

public class RecomendadorActividades {
}
